# CSA-Stablecoin-plutarch

./: README.md  plutarch-template.cabal  presentation_final_project.pptx
compiled/: dUSDMintingPolicy.plutus  oracleNFTMintingPolicy.plutus  priceFeedOracleValidator.plutus
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: package.cache  plutarch-template-0.1.0.0-inplace.conf
src/: Collateral.hs  Minting.hs  OracleNFT.hs  PriceFeedOracle.hs
test/: Spec.hs
test/Spec/: BurningSpec.hs  LiquidationSpec.hs  MintingSpec.hs  OracleNFTSpec.hs  UpdatePriceFeedSpec.hs
